<resources>
    <string name="app_name">Healthy Nepali</string>
    <string name="sex">Sex</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="yourBMI">Your BMI is:</string>
    <string name="age">Age</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="description_bg_image">background image</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="userName">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="noAccount_signup"><u>Don\'t have account? SignUp</u></string>
    <string name="healthy_nepali">Healthy Nepali</string>
    <string name="app_discription">A Nepali Health App</string>
    <string name="et_name">Name</string>
    <string name="et_email">Email</string>
    <string name="btn_signUp">SignUp</string>
    <string name="btn_cancel">Cancel</string>
    <string name="reset_password"><u>Forgot Password? Reset Now!</u></string>
    <string name="retype_password">Retype Password</string>
    <string name="emailForReset">Type Your Valid Email Address</string>
    <string name="logout">Logout</string>
    <string name="askExperts">तपाईंको जिज्ञासा </string>
    <string name="relies">विज्ञको जवाफ </string>
    <string name="healthTips">आजको स्वास्थ्य टिप्स </string>
    <string name="tip">aTip</string>
    <string name="title_activity_posted_queries">Posted Queries with Replies</string>
    <string name="homne">Home</string>
    <string name="action_settings">Settings</string>
    <string name="noteForUsers">If you are in need of blood, fill the following and click \'Send Message\'.This message will reach to all users of this app whose blood group will match the blood group u entered just now.</string>
    <string name="note_notification">You can turn off notifications if you don\'t to receive any messages related to \'Plea for blood\' from the one who needs blood.</string>
    <string name="title_activity_alarm_screen">Alarm</string>

    <string name="ginger">Ginger</string>
    <string name="cardamom">Cardamom</string>
    <string name="coriander">Coriander</string>
    <string name="lemon_grass">Lemon Grass</string>
    <string name="black_pepper">Black Pepper</string>
    <string name="peppermint">Peppermint</string>
    <string name="blackberry">Blackberry</string>
    <string name="lemon">Lemon</string>
    <string name="chrysanthemum">Chrysanthemum</string>
    <string name="tulsi">Tulsi</string>
    <string name="ecalyptus">Ecalyptus</string>
    <string name="aloevera">AloeVera</string>
    <string name="orange_peel">Orange Peel</string>
    <string name="garlic">Garlic</string>
    <string name="tomato">Tomato</string>

    <string name="cardamom_nepali">&#2360;&#2369;&#2325;&#2381;&#2350;&#2375;&#2354;</string>
    <string name="coriander_nepali">&#2343;&#2344;&#2368;&#2351;&#2366;</string>
    <string name="lemon_grass_nepali">&#2325;&#2366;&#2327;&#2340;&#2375; &#2332;&#2366;&#2352;</string>
    <string name="black_pepper_nepali">&#2350;&#2352;&#2367;&#2330;</string>
    <string name="peppermint_nepali">&#2346;&#2369;&#2342;&#2367;&#2344;&#2366;</string>
    <string name="blackberry_nepali">&#2320;&#2360;&#2375;&#2354;&#2369;</string>
    <string name="lemon_nepali">&#2325;&#2366;&#2327;&#2340;&#2368;</string>
    <string name="chrysanthemum_nepali">&#2327;&#2379;&#2342;&#2366;&#2357;&#2352;&#2368;</string>
    <string name="tulsi_nepali">&#2340;&#2369;&#2354;&#2360;&#2368;</string>
    <string name="ecalyptus_nepali">&#2350;&#2360;&#2354;&#2366;</string>
    <string name="aloevera_nepali">&#2328;&#2367;&#2313;&#2325;&#2369;&#2350;&#2366;&#2352;&#2368;</string>
    <string name="orange_peel_nepali">&#2360;&#2369;&#2344;&#2381;&#2340;&#2354;&#2325;&#2379; &#2348;&#2379;&#2325;&#2381;&#2352;&#2366;</string>
    <string name="tomato_nepali">&#2335;&#2350;&#2366;&#2335;&#2352;</string>
    <string name="ginger_nepali"> &#2309;&#2342;&#2369;&#2357;&#2366; </string>
    <string name="garlic_nepali"> &#2354;&#2360;&#2369;&#2344; </string>

    <string name="cardamom_description">Cardamom has a strong, unique taste, with an intensely aromatic, resinous fragrance. It helps curing poor digestion, gas and bloating.</string>
    <string name="coriander_description">Coriander helps in the proper secretion of enzymes and digestive juices in the stomach thus enhances digestion and peristaltic motion.</string>
    <string name="lemon_grass_description">Lemon grass is a mild diuretic and a digestive stimulant that promotes digestion of fats.</string>
    <string name="black_pepper_description">Black pepper has an expectorant property that helps to break up the mucus and phlegm depositions in the respiratory tract.</string>
    <string name="peppermint_description">Peppermint oil and peppermint tea have been used to sort out a variety of digestive and gastrointestinal conditions.</string>
    <string name="blackberry_description">Blackberries are a source of both insoluble and soluble fiber essential for the optimum functioning of digestive system.</string>
    <string name="lemon_description">The lemon juice present in lemon water promotes the production of hydrochloric acid and bile secretion required for digestion.</string>
    <string name="chrysanthemum_description">Chrysanthemum is a cooling herb helping to remove excess heat from the body thus helps a lot during fever.</string>
    <string name="tulsi_description">The miraculous healing properties of tulsi come mainly from its essential oils and the phytonutrients contained in it.</string>
    <string name="ecalyptus_description">Ecalyptus protect the body from a wide variety of bacterial infections and boosts up the immune system.</string>
    <string name="aloevera_description">Aloe-vera works as an anti-inflammatory, decreasing redness and swelling. It also has antibacterial properties.</string>
    <string name="orange_peel_description">Orange peels possess vitamin C and citric acid. It has also astringent properties thats helps to reduce pimples.</string>
    <string name="ginger_description">Ginger can be helpful in treating common cold and its symptoms due to its antiviral, expectorant, and anti-inflammatory properties.</string>
    <string name="garlic_description">Garlic is good for the immune system and helps open up respiratory passages, and also helps flush toxins out of your body.</string>
    <string name="tomato_description">In addition to being antioxidant rich, tomatoes have a high level of acidity inherent in their juice which is good for skin.</string>

    <string name="ginger_how2use">Eat raw ginger or drink ginger tea several times a day. For enhance the effectiveness of ginger tea, add a lemon juice and honey to it.</string>
    <string name="cardamom_how2use">Remove the outer pods and grind the seeds coarsely for tea. Use 1 teaspoon of seeds per 1 cup of water for tea.</string>
    <string name="coriander_how2use">Grind the seeds just before preparing its tea. You can eat its leaves along with honey making a slurry paste.</string>
    <string name="lemon_grass_how2use">Infuse a few teaspoons of dried and chopped stalks in each cup of water. Serve hot or cold with lemon slices.</string>
    <string name="black_pepper_how2use">Grind the seeds and mix a pinch of it with a teaspoon of honey to eat. You can also add it in tea and drink.</string>
    <string name="peppermint_how2use">Make tea using few leaves of peppermint. You can add both salt and sugar in it which significantly helps to reduce diarrhoea.</string>
    <string name="blackberry_how2use">You can prepare tea using its roots and leaves or syrup using its fruits that reduces diarrhoea and dysentery.</string>
    <string name="lemon_how2use">Mix sugar and salt thoroughly in water and squeeze a half cut lemon and drink it to prevent dehydration.</string>
    <string name="chrysanthemum_how2use">Boil the chrysanthemum flowers gently in hot water for no more than 10 minutes in a closed vessel and drink.</string>
    <string name="tulsi_how2use">Boil few leaves of tulsi adding some salt and drink. You can also eat its leaves directly or with honey and ginger.</string>
    <string name="ecalyptus_how2use">Grind the dry leaves of ecalyptus and add a tablespoon of it in boiled water and drink. You can also add honey on it.</string>
    <string name="aloevera_how2use">Wash your face with water and pat dry. Using your fingertips, apply the aloe directly to your problem areas.</string>
    <string name="orange_peel_how2use">Grind up your orange peels and add a little water to create a paste. Apply it on ur face and wait for 20 to 25 minutes and wash.</string>
    <string name="garlic_how2use">You can eat raw garlic or use a few drops of garlic oil in your food and drinks. Consume this daily until the symptoms subside.</string>
    <string name="tomato_how2use">Massage the tomato juice into the skin for a few seconds after application, and then you simply rinse it off with warm water.</string>
    <string name="welcomeString">Here You can find home remedies for common diseases. You just have to swipe left-side of screen to draw the Drawer with the list of provided common diseases. Be Healthy! Enjoy Healthy Life!</string>

    <string name="scrn1_title">Healthy Nepali</string>
    <string name="scrn1_desc">Let\'s know what this app does and have a tour through some of its amazing features.</string>
    <string name="scrn2_title">Ask Experts</string>
    <string name="scrn2_desc">You can ask experts about your health problems and you can get reply accordingly from well known experts.</string>
    <string name="scrn3_title">E-Blood Sewa</string>
    <string name="scrn3_desc">When you are in need of blood of any group, you can use this feature for asking help for blood donation to other users of this app.</string>
    <string name="scrn4_title">Health Tips</string>
    <string name="scrn4_desc">You enjoy reading daily health tips? That\'s what this feature is for; providing daily health tips.</string>
    <string name="scrn5_title">Health Quiz</string>
    <string name="scrn5_desc">You can know many things about your body and other health related topics by playing this quiz.</string>
    <string name="scrn6_title">Health Reminder</string>
    <string name="scrn6_desc">Do you forget taking medicines in right time? No problem we will remind you through this feature.</string>
    <string name="scrn7_title">Herbal Help</string>
    <string name="scrn7_desc">Don\'t you want to know about herbal remedies for your common diseases? That\'s what this feature helps you to do.</string>
    <string name="scrn8_title">Health Calculator</string>
    <string name="scrn8_desc">Is your weight normal? This feature will find it out for you and of course many more.</string>
</resources>
