<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup"
    tools:context="com.practice.osho.healthynepali.LoginActivity">

    <TextView
        android:id="@+id/tv_appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="20dp"
        android:text="@string/healthy_nepali"
        android:textColor="#f20e47"
        android:textSize="40sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_appName"
        android:id="@+id/app_discription"
        android:layout_centerHorizontal="true"
        android:text="@string/app_discription"
        android:textSize="20sp"
        android:layout_marginBottom="25dp"
        android:textColor="#ffff"
        android:textStyle="italic"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/app_discription"
        android:id="@+id/linearlayout1"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">

        <EditText
            android:id="@+id/et_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/userName"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:inputType="textPersonName"
            android:textSize="@dimen/font25sp">

            <requestFocus/>

        </EditText>

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:inputType="textPassword"
            android:textSize="@dimen/font25sp" />


    </LinearLayout>

    <Button
        android:layout_centerHorizontal="true"
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="@dimen/font25sp"
        style="?borderlessButtonStyle"
        android:background="@drawable/btn_custom"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/linearlayout1"
        android:onClick="onLoginClick"/>

    <TextView
        android:id="@+id/tv_SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:text="@string/noAccount_signup"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#ffff"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="3dp"
        android:clickable="true"
        android:onClick="onNoAccountClick"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_SignUp"
        android:layout_centerHorizontal="true"
        android:text="@string/reset_password"
        android:textSize="16sp"
        android:textColor="#ffff"
        android:textStyle="bold|italic"
        android:clickable="true"
        android:onClick="onResetClick"/>
</RelativeLayout>
