<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/linearlayout"
    android:padding="10dp"
    android:gravity="center"
    android:background="@drawable/signup"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:id="@+id/et_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_name"
        android:inputType="textPersonName"
        android:textSize="@dimen/font25sp">

        <requestFocus/>

    </EditText>

    <EditText
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_email"
        android:ems="10"
        android:hint="@string/et_email"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/font25sp"/>

    <EditText
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:id="@+id/et_Signup_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="@dimen/font25sp" />

    <EditText
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:id="@+id/et_retype_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/retype_password"
        android:inputType="textPassword"
        android:textSize="@dimen/font25sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:padding="5dp"
        style="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/white"
        android:text="We need following info for e-blood bank.So please provide correct information."/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/darker_gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textColor="@android:color/white"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="Blood Group:"
            android:paddingLeft="3dp"
            android:textSize="@dimen/font25sp"/>
        <Spinner
            android:id="@+id/pickBloodType"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"

            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <EditText
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:id="@+id/et_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font25sp"
        android:layout_marginTop="5dp"
        android:inputType="numberSigned"
        android:hint="Age"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:divider="@drawable/vertical_divider"
        android:background="#c5ddff"
        android:showDividers="middle"
        android:dividerPadding="10dp"
        style="?buttonBarStyle">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_signUp"
            android:textSize="@dimen/font25sp"
            android:divider="#ffffff"
            android:background="@drawable/btn_custom"
            style="?buttonBarButtonStyle"
            android:onClick="onSignUpClick"
            />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel"
            android:textSize="@dimen/font25sp"
            android:background="@drawable/btn_custom"
            style="?buttonBarButtonStyle"
            android:onClick="onCancelBtnClick"/>
    </LinearLayout>



</LinearLayout>





