<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/default_for_card">
        <ImageView
            android:id="@+id/drawer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_drawer"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Healthy Nepali (स्वास्थ नेपाली)  "
            android:paddingLeft="5dp"
            android:textColor="@android:color/black"
            style="?android:attr/textAppearanceLarge"/>
    </android.support.v7.widget.Toolbar>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:clickable="true"
            android:onClick="onAskExpertBtnClick"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/card_click_change">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/ask_expert"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/askExperts"
                    android:gravity="center"
                    android:lines="2"
                    android:textColor="@android:color/holo_red_dark"
                    style="?android:attr/textAppearanceLarge"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:clickable="true"
            android:onClick="onExpertReplyBtnClick"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/card_click_change">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/expert_reply"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/relies"
                    android:gravity="center"
                    android:lines="2"
                    android:textColor="@android:color/holo_red_dark"
                    style="?android:attr/textAppearanceLarge"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="3dp"
        android:orientation="horizontal">
        <android.support.v7.widget.CardView
            android:clickable="true"
            android:onClick="onHealthTipBtnClick"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/card_click_change">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/health_tip"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/healthTips"
                    android:gravity="center"
                    android:lines="2"
                    android:textColor="@android:color/holo_red_dark"
                    style="?android:attr/textAppearanceLarge"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:clickable="true"
            android:onClick="onEBloodBankClick"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/card_click_change">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/blood_bank"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="इ-ब्लड सेवा "
                    android:gravity="center"
                    android:lines="2"
                    android:textColor="@android:color/holo_red_dark"
                    style="?android:attr/textAppearanceLarge"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</LinearLayout>
 